Fixed compile definitions

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -27,9 +27,9 @@ endif ()
 #################################################
 set(SIGNUP_URL "https://dev.dstage.org/account/signup" CACHE STRING "Url link to sign up page")
 set(AUTH_URL "https://auth.dstage.org" CACHE STRING "Auth server url")
-set(API_URL "https://auth.dstage.org" CACHE STRING "API server websocket url (wss://...)")
-set(STAGE_URL "https://auth.dstage.org" CACHE STRING "Url link to active stage page")
-set(SETTINGS_URL "https://auth.dstage.org" CACHE STRING "Url link to settings page")
+set(API_URL "wss://api.dstage.org" CACHE STRING "API server websocket url (wss://...)")
+set(STAGE_URL "https://dev.dstage.org/stage" CACHE STRING "Url link to active stage page")
+set(SETTINGS_URL "https://dev.dstage.org/devices" CACHE STRING "Url link to settings page")
 
 
 #################################################
@@ -80,6 +80,11 @@ endif (APPLE)
 set_property(TARGET ${PROJECT_NAME} PROPERTY AUTOMOC ON)
 set_property(TARGET ${PROJECT_NAME} PROPERTY AUTORCC ON)
 set_property(TARGET ${PROJECT_NAME} PROPERTY AUTOUIC ON)
+target_compile_definitions(${PROJECT_NAME} PRIVATE SIGNUP_URL="${SIGNUP_URL}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE AUTH_URL="${AUTH_URL}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE API_URL="${API_URL}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE STAGE_URL="${STAGE_URL}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE SETTINGS_URL="${SETTINGS_URL}")
 target_sources(${PROJECT_NAME}
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
@@ -103,11 +108,6 @@ target_link_libraries(${PROJECT_NAME}
         Qt6::Widgets
         keychain
         )
-target_compile_definitions(${PROJECT_NAME} PRIVATE SIGNUP_URL=${SIGNUP_URL})
-target_compile_definitions(${PROJECT_NAME} PRIVATE AUTH_URL=${AUTH_URL})
-target_compile_definitions(${PROJECT_NAME} PRIVATE API_URL=${API_URL})
-target_compile_definitions(${PROJECT_NAME} PRIVATE STAGE_URL=${STAGE_URL})
-target_compile_definitions(${PROJECT_NAME} PRIVATE SETTINGS_URL=${SETTINGS_URL})
 if (APPLE)
     enable_language(OBJC)
     find_library(CORE_FOUNDATION Foundation)
