--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,7 +30,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/*.dmg
+          file: build/App/*.dmg
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
