Fixing windows build

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
-        run: cpack
+        run: cpack --config build/CPackConfig.cmake -B build
       - name: Publish deb
         uses: svenstaro/upload-release-action@v2
         with:
