--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,6 +16,8 @@ jobs:
         uses: jurplel/install-qt-action@v2
         with:
           version: '6.2.1'
+      - name: Install openssl
+        run: choco install openssl
       - name: Install Conan package manager
         run: |
           pip3 install wheel setuptools
@@ -23,11 +25,11 @@ jobs:
       - name: Install depedencies using Conan package manager
         run: conan install -if build --build missing .
       - name: Configure CMake
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S . -B build -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
-        run: cpack
+        run: cpack --config build/CPackConfig.cmake -B build
       - name: Publish bundle
         uses: svenstaro/upload-release-action@v2
         with:
