--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,9 +17,13 @@ jobs:
         with:
           p12-file-base64: ${{ secrets.CODESIGN_CERTIFICATE }}
           p12-password: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
+      - name: Install Qt6
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '6.2.1'
       - name: Install depedencies using brew
         run: |
-          brew install nlohmann-json cpprestsdk openssl eigen cereal qt@6
+          brew install nlohmann-json cpprestsdk openssl eigen cereal
       - name: Configure CMake
         run: |
           cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DBUILD_SERVICE=OFF -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
