--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install depedencies using Conan package manager
         run: conan install -if build --build missing .
       - name: Configure CMake
-        run: cmake -S . -B build -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S . -B build -DBUILD_SERVICE=OFF -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
