--- a/Cli/CMakeLists.txt
+++ b/Cli/CMakeLists.txt
@@ -44,9 +44,9 @@ endif (NOT TARGET cpprestsdk)
 if (NOT TARGET OpenSSL)
     find_package(OpenSSL REQUIRED)
 endif (NOT TARGET OpenSSL)
-if (NOT TARGET DigitalStageAuth)
-    find_package(DigitalStageAuth REQUIRED)
-endif (NOT TARGET DigitalStageAuth)
+if (NOT TARGET DigitalStage::AuthStatic)
+    find_package(DigitalStage::AuthStatic REQUIRED)
+endif (NOT TARGET DigitalStage::AuthStatic)
 # DeviceId - Get unique device ID
 if (NOT TARGET DeviceId)
     find_package(DeviceId REQUIRED)
@@ -87,7 +87,7 @@ target_link_libraries(${PROJECT_NAME}
         udp-discovery
         cpprestsdk::cpprest
         OpenSSL::Crypto
-        DigitalStage::AuthStatic
+        DigitalStage::Auth
         )
 target_compile_definitions(${PROJECT_NAME} PRIVATE SIGNUP_URL="${SIGNUP_URL}")
 target_compile_definitions(${PROJECT_NAME} PRIVATE AUTH_URL="${AUTH_URL}")
