--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -37,11 +37,9 @@ jobs:
         run: cmake --build build --config Release
       - name: Bundle with CPack
         run: cpack --config build/CPackConfig.cmake
-      - name: Publish deb
-        uses: svenstaro/upload-release-action@v2
+      - name: Publish archive
+        uses: ncipollo/release-action@v1
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: *.tar.gz
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+         artifacts: "*.tar.gz"
+         bodyFile: "HOWTO.md"
+         token: ${{ secrets.GITHUB_TOKEN }}
