--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,11 +30,9 @@ jobs:
         run: cmake --build build --config Release
       - name: Bundle with CPack
         run: cpack --config build/CPackConfig.cmake -B build
-      - name: Publish bundle
-        uses: svenstaro/upload-release-action@v2
+      - name: Publish installer
+        uses: ncipollo/release-action@v1
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/App/*.zip
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+          artifacts: "*.zip"
+          bodyFile: "HOWTO.md"
+          token: ${{ secrets.GITHUB_TOKEN }}
