Fixed libds dep

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -46,9 +46,9 @@ option(USE_RT_AUDIO "Use RtAudio as audio engine" ON)
 include(${CMAKE_CURRENT_LIST_DIR}/deps/cmrc/CMakeRC.cmake)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/3dti_AudioToolkit EXCLUDE_FROM_ALL)
 find_package(Threads REQUIRED)
-if (NOT TARGET DigitalStage::ApiStatic)
-    find_package(DigitalStage::ApiStatic REQUIRED)
-endif (NOT TARGET DigitalStage::ApiStatic)
+if (NOT TARGET DigitalStageApi)
+    find_package(DigitalStage REQUIRED)
+endif (NOT TARGET DigitalStageApi)
 if (NOT TARGET datachannel)
     find_package(LibDataChannel REQUIRED)
 endif (NOT TARGET datachannel)
