--- a/Cli/CMakeLists.txt
+++ b/Cli/CMakeLists.txt
@@ -44,9 +44,9 @@ endif (NOT TARGET cpprestsdk)
 if (NOT TARGET OpenSSL)
     find_package(OpenSSL REQUIRED)
 endif (NOT TARGET OpenSSL)
-if (NOT TARGET DigitalStage::AuthStatic)
-    find_package(DigitalStage::AuthStatic REQUIRED)
-endif (NOT TARGET DigitalStage::AuthStatic)
+if (NOT TARGET DigitalStageAuth)
+    find_package(DigitalStage REQUIRED)
+endif (NOT TARGET DigitalStageAuth)
 # DeviceId - Get unique device ID
 if (NOT TARGET DeviceId)
     find_package(DeviceId REQUIRED)
