--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -36,4 +36,6 @@ jobs:
         with:
           artifacts: "*.dmg"
           bodyFile: "HOWTO.md"
+          commit: "main"
+          tag: "nightly"
           token: ${{ secrets.GITHUB_TOKEN }}
