--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,5 +37,6 @@ jobs:
           artifacts: "*.dmg"
           bodyFile: "HOWTO.md"
           commit: "main"
-          tag: "nightly"
+          tag: "Nightly"
+          allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
