--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,5 +39,6 @@ jobs:
           artifacts: "*.zip"
           bodyFile: "HOWTO.md"
           commit: "main"
-          tag: "nightly"
+          tag: "Nightly"
+          allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
