Fixing windows workflow

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -6,21 +6,28 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Install Qt6
+      - uses: msys2/setup-msys2@v2
+        with:
+          install: mingw-w64-x86_64-toolchain
+          msystem: mingw64
+          release: false
+
+      - name: Install Qt
         uses: jurplel/install-qt-action@v2
         with:
           version: '6.2.1'
-          host: 'windows'
-          target: 'desktop'
-          #arch: 'win64_msvc2019_64'
-      - name: Install openssl
-        run: choco install openssl
+          host: "windows"
+          target: "desktop"
+          arch: "win64_mingw73"
+          dir: "${{github.workspace}}/qt/"
+          install-deps: "true"
+
       - name: Install Conan package manager
         run: |
           pip3 install wheel setuptools
@@ -32,7 +39,9 @@ jobs:
           conan profile update settings.compiler.runtime=static default
           conan install -if build --build missing .
       - name: Configure CMake
-        run: cmake -S . -B build -DBUILD_SERVICE=OFF -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
+        env:
+          CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
+        run: cmake -S . -B build -G "CodeBlocks - MinGW Makefiles" -DBUILD_SERVICE=OFF -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
