--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install depedencies using Conan package manager
         run: |
           conan profile new default --detect
-          conan profile update settings.compiler.cppstd=17 default
+          conan profile update settings.compiler=gcc default
           conan install -if build --build missing .
       - name: Configure CMake
         env:
