Let linux only use apt

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -14,23 +14,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Install Conan package manager
-        run: |
-          pip3 install wheel setuptools
-          pip3 install conan
       - name: Install apt packages for Qt6
         run: sudo apt-get -y install build-essential libgl1-mesa-dev libxkbcommon-dev libfontconfig-dev # libglu1-mesa-dev libvulkan-dev libx11-xcb-dev 
       - name: Install Qt6
         uses: jurplel/install-qt-action@v2
         with:
           version: '6.2.1'
-      - name: Install linux related project dependencies using apt
-        run: sudo apt-get -y install libssl-dev libsrtp2-dev libsecret-1-dev cmake pkg-config libasound2-dev libjack-dev
-      - name: Install general project dependencies using Conan package manager
-        run: |
-          conan profile new default --detect
-          conan profile update settings.compiler.libcxx=libstdc++11 default
-          conan install -if build .
+      - name: Install dependencies using apt
+        run: sudo apt-get -y install libssl-dev libsrtp2-dev libsecret-1-dev cmake pkg-config libasound2-dev libjack-dev libeigen3-dev libcereal-dev libcpprest-dev nlohmann-json3-dev
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
       - name: Build with CMake
