--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,6 +12,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - uses: msys2/setup-msys2@v2
+        with:
+          install: mingw-w64-x86_64-toolchain
+          msystem: mingw64
+          release: false
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
@@ -19,7 +24,7 @@ jobs:
           version: '6.2.1'
           host: "windows"
           target: "desktop"
-          arch: "win64_msvc2019_64"
+          arch: "win64_mingw81"
           dir: "${{github.workspace}}/qt/"
           install-deps: "true"
 
@@ -29,11 +34,11 @@ jobs:
           pip3 install conan
       - name: Install depedencies using Conan package manager
         run: |
-          conan install -if build --build missing .
+          conan install -if build --profile msys2_mingw --build missing .
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
-        run: cmake -S . -B build -DBUILD_SERVICE=OFF -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S . -B build -G "CodeBlocks - MinGW Makefiles" -DBUILD_SERVICE=OFF -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
