Completet install structure

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -159,9 +159,10 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 install(
         TARGETS ${PROJECT_NAME}
         EXPORT "${TARGETS_EXPORT_NAME}"
-        BUNDLE DESTINATION . COMPONENT Runtime
-        RUNTIME DESTINATION bin COMPONENT Runtime
-        LIBRARY DESTINATION lib COMPONENT Runtime
+        BUNDLE DESTINATION . COMPONENT RUNTIME
+        RUNTIME DESTINATION bin COMPONENT RUNTIME
+        LIBRARY DESTINATION lib COMPONENT LIBRARY
+        LIBRARY DESTINATION share COMPONENT RESOURCE
 )
 if (CMAKE_BUILD_TYPE MATCHES Release)
     if (APPLE)
