--- a/Cli/CMakeLists.txt
+++ b/Cli/CMakeLists.txt
@@ -104,8 +104,10 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE SETTINGS_URL="${SETTINGS_URL}
 install(
         TARGETS ${PROJECT_NAME}
         EXPORT "${TARGETS_EXPORT_NAME}"
-        RUNTIME DESTINATION bin COMPONENT Runtime
-        LIBRARY DESTINATION lib COMPONENT Runtime
+        BUNDLE DESTINATION . COMPONENT RUNTIME
+        RUNTIME DESTINATION bin COMPONENT RUNTIME
+        LIBRARY DESTINATION lib COMPONENT LIBRARY
+        LIBRARY DESTINATION share COMPONENT RESOURCE
 )
 
 
