--- a/Cli/CMakeLists.txt
+++ b/Cli/CMakeLists.txt
@@ -126,20 +126,22 @@ set(CPACK_PACKAGE_INSTALL_DIRECTORY "Digital Stage Connector")
 set(CPACK_PACKAGE_ICON ${CMAKE_CURRENT_LIST_DIR}/assets/logo.png)
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_LIST_DIR}/../LICENSE)
 set(CPACK_RESOURCE_FILE_README ${CMAKE_CURRENT_LIST_DIR}/../README.md)
-set(CPACK_COMPONENTS_ALL Runtime)
 
 if (UNIX)
     if (APPLE)
-        set(CPACK_PACKAGE_FILE_NAME "DigitalStageConnectorService-${CMAKE_PROJECT_VERSION}-linux")
-        set(CPACK_ARCHIVE_FILE_NAME "DigitalStage-${CMAKE_PROJECT_VERSION}-linux")
+        set(CPACK_COMPONENTS_ALL RUNTIME)
         set(CPACK_GENERATOR "ZIP")
     else ()
+        set(CPACK_COMPONENTS_ALL RUNTIME LIBRARY RESOURCE)
+        set(CPACK_PACKAGE_FILE_NAME "DigitalStageConnectorService-${CMAKE_PROJECT_VERSION}-linux")
+        set(CPACK_ARCHIVE_FILE_NAME "DigitalStage-${CMAKE_PROJECT_VERSION}-linux")
         include(InstallRequiredSystemLibraries)
         set(CPACK_GENRATOR "TGZ")
     endif ()
 else ()
+    set(CPACK_COMPONENTS_ALL RUNTIME LIBRARY RESOURCE)
+    set(CPACK_GENERATOR "ZIP")
 endif ()
 
-set(CPACK_GENERATOR "ZIP")
 include(CPack)
 
