Fixed issue with private linkage of core

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -151,7 +151,7 @@ cmrc_add_resource_library(${PROJECT_NAME}-resources
 #
 #################################################
 target_link_libraries(${PROJECT_NAME}
-        PRIVATE
+        PUBLIC
         DigitalStage::ApiStatic
         cpprestsdk::cpprest
         OpenSSL::Crypto
